--- a/notebooks/eda_data_quality.ipynb
+++ b/notebooks/eda_data_quality.ipynb
@@ -5,7 +5,16 @@
    "execution_count": null,
    "id": "7f5eb70f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1241137590.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mfrom ./utils.data_quality import run_quality_checks\u001b[39m\n          ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from utils.data_quality import run_quality_checks\n",
@@ -69,8 +78,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "rahul_venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
